popUP app clean SDK51 prebuild

--- a/app.json
+++ b/app.json
@@ -1,24 +1,26 @@
 {
   "expo": {
-    "name": "popUP_clean_app",
+    "name": "popUP",
     "slug": "popUP_clean_app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.clean.popup"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.clean.popup"
     },
     "web": {
       "favicon": "./assets/favicon.png"
